hphp/test/quick/ns_existing_names_class.php.expectf

Fatal error: Cannot use A\Cl as Cl because the name is already in use%s on line 8
